styles.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html{
    font-size: 62.5%;
}
:root{
    --MODERATE-VIOLET: hsl(263, 55%, 52%);
    --VERY-DARK-GRAYISH-BLUE: hsl(217, 19%, 35%);
    --VERY-DARK-BLACKISH-BLUE: hsl(219, 29%, 14%);
    --WHITE: hsl(0, 0%, 100%);
    --LIGHT-GRAY: hsl(0, 0%, 81%);
    --LIGHT-GRAYISH-BLUE: hsl(210, 46%, 95%);
}
.attribution a { 
    color: rgb(155, 85, 155);
    text-decoration: none;
}
body{
    min-height: 100%;
    display: grid;
    background-color: var(--LIGHT-GRAYISH-BLUE);
    place-content: center;
    font-family: "Barlow Semi Condensed", sans-serif;
    padding: 8rem 0 0 0;
}
.card__profile img{
    width: 4rem;
    border-radius: 2rem;
    border: 2px solid white;
}
.card__profile__desc h3{
    font-weight: 600;
    font-size: 1.4rem;
    color: white;
}
.card__profile__desc p{
    font-size: 1.3rem;
    color: var(--LIGHT-GRAY);
}
.card__profile__desc{
    width: max-content;
}
.card__profile{
    display: flex;
    gap: 1.5rem;
    align-items: center;
    margin-bottom: 1.5rem;
}
.card__desc h1{
    font-size: 1.8rem;
    font-weight: 600;
    width: 27.2rem;
    word-spacing: -2px;
    margin-bottom: 1.5rem;
}
.card__desc p{
    font-size: 1.3rem;
    width: 27.5rem;
    line-height: 1.4em;
}
.card{
    padding: 2.5rem 2.5rem 3.4rem 2.5rem;
    margin-bottom: 2rem;
    max-width: 34rem;
    border-radius: 1rem;
}
#card-one{
    background-color: var(--MODERATE-VIOLET);
    background-image: url(images/bg-pattern-quotation.svg);
    background-repeat: no-repeat;
    background-position: calc(100% - 2.5rem) top;
    position: relative;
}
#card-one h1{
    color: white;
}
#card-one p{
    color: var(--LIGHT-GRAY);
    font-weight: normal;
}
#card-two{
    background-color: var(--VERY-DARK-GRAYISH-BLUE);
}
#card-two h1{
    color: var(--WHITE);
}
#card-two p{
    color: var(--LIGHT-GRAY);
}
#card-two .card__desc p{
    width: 28rem;
}
#card-three{
    background-color: var(--WHITE);
}
#card-three .card__profile__desc h3{
    color: var(--VERY-DARK-GRAYISH-BLUE);
}
#card-three .card__desc h1{
    color: var(--VERY-DARK-GRAYISH-BLUE);
}
#card-three .card__desc p{
    color: var(--LIGHT-GRAY);
}
#card-four{
    background-color: var(--VERY-DARK-BLACKISH-BLUE);
}
#card-four h1{
    color: var(--WHITE);
    width: 27.5rem;
}
#card-four p{
    color: var(--LIGHT-GRAY);
    width: 26rem;
}
#card-five{
    background-color: var(--WHITE);
}
#card-five h1, #card-five h3{
    color: var(--VERY-DARK-BLACKISH-BLUE);
}
#card-five p{
    color: var(--VERY-DARK-GRAYISH-BLUE);
}
#card-five h1{
    width: 28rem;
}
/* .attribution {
    font-size: 13px;
    align-self: center;
    justify-self: center;
    position: absolute;
    bottom: 0;
    transform: translateX(-50%);
    left: 50%;
    width: max-content;
    display: flex;
    align-items: center;
    margin-bottom: 2rem;
    color: var(--VERY-DARK-BLACKISH-BLUE);
    gap: 1rem;
} */
.box{
    margin-bottom: 6rem;
}
.attribution{
    font-size: 13px;
    align-self: center;
    height: 4rem;
    display: flex;
    gap: 1rem;
    margin-bottom: 2rem;
}
.attribution p{
    height: fit-content;
    align-self: center;
}
@media (min-width: 1440px) {
    .box{
        display: grid;
        row-gap: 3rem;
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: repeat(2, 28.5rem);
    }
    #card-one{
        grid-column: 1 / span 2;
        grid-row: 1/2;
        max-width: 68rem;
        background-position: calc(100% - 10rem) top;
        margin-right: 3rem;
    }
    #card-two{
        grid-column: 3/4;
        grid-row: 1/2;
        margin-right: 3rem;
    }
    #card-five{
        grid-column: 4/5;
        grid-row: 1/3;
    }
    #card-three{
        grid-column: -5/-4;
        grid-row: 2/3;
        margin-right: 3rem;
    }
    #card-four{
        grid-column: -4 / span 2;
        max-width: 68rem;
        margin-right: 3rem;
    }
    .card{
        margin-bottom: 0;
        padding: 3.5rem;
    }
    body{
        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    #card-one h1{
        width: 50rem;
    }
    #card-one p{
        width: 61rem;
    }
    #card-two h1{
        width: 24rem;
    }
    #card-two .card__desc p{
        width: 20rem;
    }
    #card-three .card__desc h1{
        width: 18rem;
    }
    #card-three .card__desc p{
        width: 20rem;
    }
    #card-four h1{
        width: 52rem;
    }
    #card-four p{
        width: 54rem;
    }
    #card-five h1{
        width: 24rem;
    }
    #card-five p{
        width: 22rem;
    }
    .card__desc h1{
        font-size: 2rem;
    }
    .card__desc p{
        font-size: 1.4rem;
    }
}

